--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   background: url(./assets/flower.png);
   background-size: 100% 100%;
 }
-  div#container {
+  div#flowers {
     width: 100% !important;
     height: 100% !important;
 }
